
noinst_PROGRAMS=configdemo createdemo filterdemo getpayloaddemo gettcpdemo \
gettransportdemo headerdemo httpcount lengthdemo mplscount mplstag readdemo \
sourcedemo timedemo writedemo 

include ../Makefile.examples

configdemo_SOURCES=configdemo.c
createdemo_SOURCES=createdemo.c
filterdemo_SOURCES=filterdemo.c
getpayloaddemo_SOURCES=getpayloaddemo.c
gettcpdemo_SOURCES=gettcpdemo.c
gettransportdemo_SOURCES=gettransportdemo.c
headerdemo_SOURCES=headerdemo.c
httpcount_SOURCES=httpcount.c
lengthdemo_SOURCES=lengthdemo.c
mplscount_SOURCES=mplscount.c
mplstag_SOURCES=mplstag.c
readdemo_SOURCES=readdemo.c
sourcedemo_SOURCES=sourcedemo.c
timedemo_SOURCES=timedemo.c
writedemo_SOURCES=writedemo.c

