## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

man_MANS = tracereport.1
EXTRA_DIST = $(man_MANS)
include ../Makefile.tools
bin_PROGRAMS = tracereport

tracereport_SOURCES = \
	tracereport.c\
	contain.c\
	dir_report.c\
	error_report.c\
	flow_report.c\
	misc_report.c\
	port_report.c\
	protocol_report.c\
	tos_report.c\
	ttl_report.c\
	tcpopt_report.c\
	synopt_report.c\
	nlp_report.c\
	ecn_report.c\
	tcpsegment_report.c\
	drops_report.c\
	contain.h\
	report.h\
	tracereport.h


